--- a/src/main/resources/engine.fxml
+++ b/src/main/resources/engine.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
@@ -163,7 +164,7 @@
                       </children></AnchorPane>
               </content>
           </Tab>
-          <Tab fx:id="editorTab" closable="false" text="Editor">
+          <Tab fx:id="editorTab" closable="false" text="State Editor">
               <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="anchor-section">
                       <children>
@@ -194,12 +195,16 @@
                                   </SplitPane>
                               </children>
                           </AnchorPane>
-                        <AnchorPane fx:id="editorState" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                        <AnchorPane fx:id="editorState" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: -fx-default-light;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <children>
+                              <ListView fx:id="editorStatesList" prefHeight="512.0" prefWidth="273.0" style="-fx-font-family: sans-serif;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <Button fx:id="editorOpenStateButton" layoutX="723.0" layoutY="14.0" mnemonicParsing="false" styleClass="default-choose-button" text="Open" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0" />
+                           </children></AnchorPane>
                       </children>
                   </AnchorPane>
               </content>
           </Tab>
-            <Tab closable="false" text="Code">
+            <Tab closable="false" text="Code Editor">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="anchor-section">
                      <children>
