--- a/src/main/resources/engine.fxml
+++ b/src/main/resources/engine.fxml
@@ -199,6 +199,7 @@
                            <children>
                               <ListView fx:id="editorStatesList" prefHeight="512.0" prefWidth="273.0" style="-fx-font-family: sans-serif;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
                               <Button fx:id="editorOpenStateButton" layoutX="723.0" layoutY="14.0" mnemonicParsing="false" styleClass="default-choose-button" text="Open" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0" />
+                              <Button fx:id="editorNewStateButton" layoutX="670.0" layoutY="15.0" mnemonicParsing="false" style="-fx-background-color: green;" styleClass="default-button" text="New" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="15.0" />
                            </children></AnchorPane>
                       </children>
                   </AnchorPane>
