--- a/src/main/resources/engine.fxml
+++ b/src/main/resources/engine.fxml
@@ -197,10 +197,26 @@
                           </AnchorPane>
                         <AnchorPane fx:id="editorState" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: -fx-default-light;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
-                              <ListView fx:id="editorStatesList" prefHeight="512.0" prefWidth="273.0" style="-fx-font-family: sans-serif; -fx-background-color: -fx-default-dark;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                              <Button fx:id="editorOpenStateButton" layoutX="723.0" layoutY="14.0" mnemonicParsing="false" styleClass="default-choose-button" text="Open" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="10.0" />
-                              <Button fx:id="editorNewStateButton" layoutX="670.0" layoutY="15.0" mnemonicParsing="false" style="-fx-background-color: green;" styleClass="default-button" text="New" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="10.0" />
-                              <Button fx:id="deleteStateButton" layoutX="728.0" layoutY="481.0" mnemonicParsing="false" style="-fx-background-color: #f55442;" styleClass="default-button" text="Delete" AnchorPane.bottomAnchor="8.0" AnchorPane.rightAnchor="8.0" />
+                              <SplitPane dividerPositions="0.32663316582914576" prefHeight="160.0" prefWidth="200.0" styleClass="default-split-pane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <items>
+                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                       <children>
+                                          <ListView fx:id="editorStatesList" layoutX="-17.0" layoutY="-10.0" prefHeight="512.0" prefWidth="273.0" style="-fx-font-family: sans-serif; -fx-background-color: -fx-default-dark;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                       </children>
+                                    </AnchorPane>
+                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                       <children>
+                                          <AnchorPane layoutY="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                             <children>
+                                                <Button fx:id="editorOpenStateButton" mnemonicParsing="false" styleClass="default-choose-button" text="Open" AnchorPane.rightAnchor="75.0" AnchorPane.topAnchor="10.0" GridPane.columnIndex="3" />
+                                                <Button fx:id="deleteStateButton" mnemonicParsing="false" style="-fx-background-color: #f55442;" styleClass="default-button" text="Delete" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" GridPane.columnIndex="3" GridPane.rowIndex="12" />
+                                             </children>
+                                          </AnchorPane>
+                                          <Button fx:id="editorNewStateButton" mnemonicParsing="false" style="-fx-background-color: green;" styleClass="default-button" text="New" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="10.0" />
+                                       </children>
+                                    </AnchorPane>
+                                </items>
+                              </SplitPane>
                            </children></AnchorPane>
                       </children>
                   </AnchorPane>
