--- a/src/main/resources/fxml/createState.fxml
+++ b/src/main/resources/fxml/createState.fxml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.*?>
+
+<!--
+  ~ Copyright © 2020 Harmony Engines.
+  ~ All rights reserved.
+  -->
+
 <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="anchor-section" stylesheets="@../css/harmony.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.harmony.engine.io.editor.state.StateUtils">
    <children>
       <Label layoutX="14.0" layoutY="17.0" styleClass="default-label" text="Name:" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="17.0" />
