--- a/src/main/resources/fxml/texture/selectTexture.fxml
+++ b/src/main/resources/fxml/texture/selectTexture.fxml
@@ -5,6 +5,12 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+
+<!--
+  ~ Copyright © 2020 Harmony Engines.
+  ~ All rights reserved.
+  -->
+
 <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: -fx-default-medium;" stylesheets="@../../css/harmony.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.harmony.engine.utils.textures.SelectTextureController">
    <children>
       <Button fx:id="cancelButton" layoutX="447.0" layoutY="359.0" mnemonicParsing="false" styleClass="default-button" text="Cancel" />
