--- a/src/main/resources/fxml/globalPreferences.fxml
+++ b/src/main/resources/fxml/globalPreferences.fxml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
 <!--
   ~ Copyright © 2020 Harmony Engines.
@@ -28,14 +36,15 @@
                      <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
                      <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
                      <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+                     <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+                     <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
                      <RowConstraints maxHeight="65.0" minHeight="65.0" prefHeight="65.0" vgrow="NEVER" />
                      <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
                      <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
                      <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
                      <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
                      <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
-                     <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
-                     <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+                  <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
                   <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
                   <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
                  </rowConstraints>
@@ -46,51 +55,57 @@
                         <Insets left="20.0" />
                      </GridPane.margin></Label>
                      <ComboBox fx:id="theme" prefHeight="27.0" prefWidth="285.0" promptText="Select Theme" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                     <Label styleClass="default-label" text="Auto-Save:" GridPane.rowIndex="3">
+                     <Label styleClass="default-label" text="Auto-Save:" GridPane.rowIndex="5">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin></Label>
-                     <CheckBox fx:id="autoSave" mnemonicParsing="false" prefHeight="18.0" prefWidth="19.0" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                     <CheckBox fx:id="autoSave" mnemonicParsing="false" prefHeight="18.0" prefWidth="19.0" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="5" />
       
-                        <Label style="-fx-font-size: 30px; -fx-font-family: sans-serif;" styleClass="default-label" text="Editor" GridPane.rowIndex="5" />
-                  <Label styleClass="default-label" text="Draw From Top:" GridPane.rowIndex="6">
+                        <Label style="-fx-font-size: 30px; -fx-font-family: sans-serif;" styleClass="default-label" text="Editor" GridPane.rowIndex="7" />
+                  <Label styleClass="default-label" text="Draw From Top:" GridPane.rowIndex="8">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin></Label>
-                  <CheckBox fx:id="editorDrawFromTop" mnemonicParsing="false" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                     <Label styleClass="default-label" text="Pan Multiplier:" GridPane.rowIndex="7">
+                  <CheckBox fx:id="editorDrawFromTop" mnemonicParsing="false" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                     <Label styleClass="default-label" text="Pan Multiplier:" GridPane.rowIndex="9">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin></Label>
-                     <TextField fx:id="panMultiplier" prefHeight="27.0" prefWidth="57.0" promptText="1.0" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                  <Label styleClass="default-label" text="Editor Background Color:" GridPane.rowIndex="9">
+                     <TextField fx:id="panMultiplier" prefHeight="27.0" prefWidth="57.0" promptText="1.0" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+                  <Label styleClass="default-label" text="Editor Background Color:" GridPane.rowIndex="11">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin></Label>
-                  <TextField fx:id="editorBGColor" prefHeight="27.0" prefWidth="63.0" promptText="35406c" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="9" />
-                  <Label styleClass="default-label" text="Outline Color:" GridPane.rowIndex="10">
+                  <TextField fx:id="editorBGColor" prefHeight="27.0" prefWidth="63.0" promptText="35406c" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="11" />
+                  <Label styleClass="default-label" text="Outline Color:" GridPane.rowIndex="12">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin></Label>
-                  <TextField fx:id="editorOutlineColor" prefHeight="27.0" prefWidth="63.0" promptText="ff0000" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="10" />
-                  <Label styleClass="default-label" text="Show Guide Lines:" GridPane.rowIndex="12">
+                  <TextField fx:id="editorOutlineColor" prefHeight="27.0" prefWidth="63.0" promptText="ff0000" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="12" />
+                  <Label styleClass="default-label" text="Show Guide Lines:" GridPane.rowIndex="14">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin>
                   </Label>
-                  <CheckBox fx:id="editorShowGuideLines" mnemonicParsing="false" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="12" />
-                  <Label prefHeight="21.0" prefWidth="195.0" styleClass="default-label" text="Guide Line Distance:" GridPane.rowIndex="13">
+                  <CheckBox fx:id="editorShowGuideLines" mnemonicParsing="false" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="14" />
+                  <Label prefHeight="21.0" prefWidth="195.0" styleClass="default-label" text="Guide Line Distance:" GridPane.rowIndex="15">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin>
                   </Label>
-                  <TextField fx:id="editorGuideLineDist" prefHeight="27.0" prefWidth="57.0" promptText="10" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="13" />
-                  <Label styleClass="default-label" text="JDK:" GridPane.rowIndex="4">
+                  <TextField fx:id="editorGuideLineDist" prefHeight="27.0" prefWidth="57.0" promptText="10" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="15" />
+                  <Label styleClass="default-label" text="JDK:" GridPane.rowIndex="3">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin>
                   </Label>
-                  <ComboBox fx:id="jdk" prefHeight="27.0" prefWidth="285.0" promptText="Select JDK" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <ComboBox fx:id="jdk" prefHeight="27.0" prefWidth="285.0" promptText="Select JDK" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Label styleClass="default-label" text="Compress Project XML:" GridPane.rowIndex="4">
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <CheckBox fx:id="compressProject" mnemonicParsing="false" prefHeight="18.0" prefWidth="19.0" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                </children>
                <padding>
                   <Insets left="10.0" top="10.0" />
