--- a/src/main/resources/launcher.fxml
+++ b/src/main/resources/launcher.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <!--
@@ -9,16 +11,16 @@
   ~ All rights reserved.
   -->
 
-<AnchorPane id="launcher-pane" fx:id="anchorPane" prefHeight="400.0" prefWidth="640.0" stylesheets="@css/harmony.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.harmony.engine.LauncherController">
+<AnchorPane id="launcher-pane" fx:id="anchorPane" prefHeight="600.0" prefWidth="800.0" stylesheets="@css/harmony.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.harmony.engine.LauncherController">
    <children>
-      <Button id="new-proj-btn" fx:id="newProjectButton" layoutX="236.0" layoutY="244.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="131.0" text="New Project" AnchorPane.bottomAnchor="113.0" AnchorPane.leftAnchor="236.0" AnchorPane.rightAnchor="233.0" AnchorPane.topAnchor="244.0" />
-      <Button id="new-proj-btn" fx:id="openProjectButton" layoutX="236.0" layoutY="301.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="131.0" text="Open Project" AnchorPane.bottomAnchor="56.0" AnchorPane.leftAnchor="236.0" AnchorPane.rightAnchor="233.0" AnchorPane.topAnchor="301.0" />
-      <Label alignment="CENTER" layoutX="143.0" layoutY="14.0" style="-fx-font-size: 37px;" styleClass="default-label" text="Harmony Engine" AnchorPane.leftAnchor="143.0" AnchorPane.rightAnchor="140.0" AnchorPane.topAnchor="14.0">
+      <Button id="new-proj-btn" fx:id="newProjectButton" layoutX="87.0" layoutY="508.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="251.0" text="New Project" AnchorPane.bottomAnchor="46.0" AnchorPane.leftAnchor="87.0" AnchorPane.rightAnchor="462.0" AnchorPane.topAnchor="508.0" />
+      <Button id="new-proj-btn" fx:id="openProjectButton" layoutX="470.0" layoutY="508.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="251.0" text="Open Project" AnchorPane.bottomAnchor="46.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="87.0" AnchorPane.topAnchor="508.0" />
+      <Label alignment="CENTER" layoutX="143.0" layoutY="14.0" style="-fx-font-size: 37px;" styleClass="default-label" text="Harmony Engine" AnchorPane.leftAnchor="141.5" AnchorPane.rightAnchor="141.5" AnchorPane.topAnchor="14.0">
          <font>
             <Font size="37.0" />
          </font>
       </Label>
-      <Label fx:id="versionLabel" alignment="CENTER" layoutX="252.0" layoutY="68.0" styleClass="default-label" text="Version: 0.0.0" AnchorPane.leftAnchor="143.0" AnchorPane.rightAnchor="140.0">
+      <Label fx:id="versionLabel" alignment="CENTER" layoutX="252.0" layoutY="68.0" styleClass="default-label" text="Version: 0.0.0" AnchorPane.leftAnchor="141.5" AnchorPane.rightAnchor="141.5">
          <font>
             <Font size="15.0" />
          </font>
@@ -26,5 +28,15 @@
 
       <Button fx:id="globalPreferencesButton" layoutX="539.0" layoutY="343.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="27.0" style="-fx-background-color: transparent;" styleClass="default-button" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
       <ProgressBar fx:id="progressBar" layoutX="43.0" layoutY="367.0" prefHeight="20.0" prefWidth="554.0" progress="0.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="43.0" AnchorPane.rightAnchor="43.0" />
+      <AnchorPane layoutX="300.0" layoutY="200.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: -fx-default-medium;" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="87.0" AnchorPane.rightAnchor="87.0" AnchorPane.topAnchor="150.0">
+         <children>
+            <Label fx:id="noRecentLabel" layoutX="193.0" layoutY="134.0" style="-fx-font-size: 25px;" styleClass="default-label" text="No Recent Projects" AnchorPane.bottomAnchor="134.0" AnchorPane.leftAnchor="193.0" AnchorPane.rightAnchor="192.0" AnchorPane.topAnchor="134.0" />
+            <Label fx:id="p1" alignment="CENTER" layoutY="14.0" prefHeight="21.0" prefWidth="626.0" styleClass="default-label" />
+            <Label fx:id="p2" alignment="CENTER" layoutX="-1.0" layoutY="73.0" prefHeight="21.0" prefWidth="626.0" styleClass="default-label" />
+            <Label fx:id="p3" alignment="CENTER" layoutX="-1.0" layoutY="140.0" prefHeight="21.0" prefWidth="626.0" styleClass="default-label" />
+            <Label fx:id="p4" alignment="CENTER" layoutY="203.0" prefHeight="21.0" prefWidth="626.0" styleClass="default-label" />
+            <Label fx:id="p5" alignment="CENTER" layoutY="265.0" prefHeight="21.0" prefWidth="626.0" styleClass="default-label" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
