--- a/src/main/resources/launcher.fxml
+++ b/src/main/resources/launcher.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
@@ -28,15 +30,66 @@
 
       <Button fx:id="globalPreferencesButton" layoutX="539.0" layoutY="343.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="27.0" style="-fx-background-color: transparent;" styleClass="default-button" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
       <ProgressBar fx:id="progressBar" layoutX="43.0" layoutY="367.0" prefHeight="20.0" prefWidth="554.0" progress="0.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="43.0" AnchorPane.rightAnchor="43.0" />
-      <AnchorPane layoutX="300.0" layoutY="200.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: -fx-default-medium;" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="87.0" AnchorPane.rightAnchor="87.0" AnchorPane.topAnchor="150.0">
+      <AnchorPane layoutX="88.0" layoutY="187.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: -fx-default-medium;" AnchorPane.bottomAnchor="113.0" AnchorPane.leftAnchor="88.0" AnchorPane.rightAnchor="86.0" AnchorPane.topAnchor="187.0">
          <children>
             <Label fx:id="noRecentLabel" layoutX="193.0" layoutY="134.0" style="-fx-font-size: 25px;" styleClass="default-label" text="No Recent Projects" AnchorPane.bottomAnchor="134.0" AnchorPane.leftAnchor="193.0" AnchorPane.rightAnchor="192.0" AnchorPane.topAnchor="134.0" />
-            <Label fx:id="p1" alignment="CENTER" layoutY="14.0" prefHeight="21.0" prefWidth="626.0" styleClass="default-label" />
-            <Label fx:id="p2" alignment="CENTER" layoutX="-1.0" layoutY="73.0" prefHeight="21.0" prefWidth="626.0" styleClass="default-label" />
-            <Label fx:id="p3" alignment="CENTER" layoutX="-1.0" layoutY="140.0" prefHeight="21.0" prefWidth="626.0" styleClass="default-label" />
-            <Label fx:id="p4" alignment="CENTER" layoutY="203.0" prefHeight="21.0" prefWidth="626.0" styleClass="default-label" />
-            <Label fx:id="p5" alignment="CENTER" layoutY="265.0" prefHeight="21.0" prefWidth="626.0" styleClass="default-label" />
+            <Label fx:id="p1" alignment="CENTER" layoutX="1.0" layoutY="7.0" prefHeight="21.0" prefWidth="626.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
+               <styleClass>
+                  <String fx:value="default-label" />
+                  <String fx:value="button-label" />
+               </styleClass>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <padding>
+                  <Insets bottom="4.0" top="4.0" />
+               </padding></Label>
+            <Label fx:id="p2" alignment="CENTER" layoutY="66.0" prefHeight="21.0" prefWidth="626.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
+               <styleClass>
+                  <String fx:value="default-label" />
+                  <String fx:value="button-label" />
+               </styleClass>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <padding>
+                  <Insets bottom="4.0" top="4.0" />
+               </padding></Label>
+            <Label fx:id="p3" alignment="CENTER" layoutY="133.0" prefHeight="21.0" prefWidth="626.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
+               <styleClass>
+                  <String fx:value="default-label" />
+                  <String fx:value="button-label" />
+               </styleClass>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <padding>
+                  <Insets bottom="4.0" top="4.0" />
+               </padding></Label>
+            <Label fx:id="p4" alignment="CENTER" layoutX="1.0" layoutY="196.0" prefHeight="21.0" prefWidth="626.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
+               <styleClass>
+                  <String fx:value="default-label" />
+                  <String fx:value="button-label" />
+               </styleClass>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <padding>
+                  <Insets bottom="4.0" top="4.0" />
+               </padding></Label>
+            <Label fx:id="p5" alignment="CENTER" layoutX="2.0" layoutY="266.0" prefHeight="21.0" prefWidth="626.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
+               <styleClass>
+                  <String fx:value="default-label" />
+                  <String fx:value="button-label" />
+               </styleClass>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <padding>
+                  <Insets bottom="4.0" top="4.0" />
+               </padding></Label>
          </children>
       </AnchorPane>
+      <Label fx:id="recentProjects" layoutX="301.0" layoutY="135.0" style="-fx-font-size: 25px;" styleClass="default-label" text="Recent Projects" AnchorPane.bottomAnchor="433.0" AnchorPane.leftAnchor="301.0" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="135.0" />
    </children>
 </AnchorPane>
