--- a/src/main/resources/fxml/newProject.fxml
+++ b/src/main/resources/fxml/newProject.fxml
@@ -21,8 +21,8 @@
           <columnConstraints>
               <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="256.0" />
               <ColumnConstraints hgrow="SOMETIMES" maxWidth="245.0" minWidth="10.0" prefWidth="245.0" />
-              <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="95.0" />
-              <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="100.0" />
+              <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="109.0" />
+              <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="88.0" />
               <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="100.0" />
               <ColumnConstraints />
           </columnConstraints>
@@ -45,7 +45,7 @@
             <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
           </rowConstraints>
          <children>
-            <Label fx:id="projectNameLabel" style="-fx-font-size: 30px;" styleClass="default-label" text="New Project" GridPane.rowIndex="1" GridPane.columnSpan="4">
+            <Label fx:id="projectNameLabel" style="-fx-font-size: 30px;" styleClass="default-label" text="New Project" GridPane.columnSpan="4" GridPane.rowIndex="1">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
@@ -57,22 +57,33 @@
                   <Insets left="25.0" />
                </padding>
             </Label>
-            <TextField fx:id="projectName" promptText="Project Name" text="New Project" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <Label styleClass="default-label" text="Version ID:" GridPane.rowIndex="4">
+            <TextField fx:id="projectName" promptText="Project Name" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label styleClass="default-label" text="Version ID:" GridPane.rowIndex="5">
                <padding>
                   <Insets left="25.0" />
                </padding>
             </Label>
-            <TextField fx:id="version" promptText="Eg. 2.4.6" styleClass="default-text-field" text="1.0.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <Label styleClass="default-label" text="Include Demo Resources:" GridPane.rowIndex="6">
+            <TextField fx:id="version" promptText="Eg. 2.4.6" styleClass="default-text-field" text="1.0.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Label styleClass="default-label" text="Include Demo Resources:" GridPane.rowIndex="7">
                <padding>
                   <Insets left="25.0" />
                </padding>
             </Label>
-            <CheckBox mnemonicParsing="false" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <CheckBox mnemonicParsing="false" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <Label styleClass="default-label" text="Location:" GridPane.rowIndex="4">
+               <padding>
+                  <Insets left="25.0" />
+               </padding>
+            </Label>
+            <TextField fx:id="locationField" promptText="Parent Directory" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Button fx:id="chooseLocationButton" mnemonicParsing="false" styleClass="default-button" text="Choose" GridPane.columnIndex="2" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </Button>
          </children>
       </GridPane>
-      <Button fx:id="createButton" mnemonicParsing="false" styleClass="default-choose-button" text="Create" AnchorPane.bottomAnchor="12.0" AnchorPane.rightAnchor="12.0" />
+      <Button fx:id="createButton" disable="true" mnemonicParsing="false" styleClass="default-choose-button" text="Create" AnchorPane.bottomAnchor="12.0" AnchorPane.rightAnchor="12.0" />
       <Button fx:id="cancelButton" mnemonicParsing="false" styleClass="default-button" text="Cancel" AnchorPane.bottomAnchor="12.0" AnchorPane.rightAnchor="85.0" />
    </children>
 </AnchorPane>
