Allowed the demo resources to be downloaded when the box is checked (need to fix the downloading to the wrong directory problem)

--- a/src/main/resources/fxml/newProject.fxml
+++ b/src/main/resources/fxml/newProject.fxml
@@ -69,7 +69,7 @@
                   <Insets left="25.0" />
                </padding>
             </Label>
-            <CheckBox mnemonicParsing="false" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <CheckBox fx:id="demoResources" mnemonicParsing="false" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="7" />
             <Label styleClass="default-label" text="Location:" GridPane.rowIndex="4">
                <padding>
                   <Insets left="25.0" />
